--- a/_cdn/scss/style.scss
+++ b/_cdn/scss/style.scss
@@ -1,7 +1,7 @@
 @import "components/reset";
 @import "components/variaveis";
 
-body{
+body {
   width: 100%;
   height: 100vh;
 
@@ -9,12 +9,12 @@ body{
 
 }
 
-a{
+a {
   display: block;
   text-decoration: none;
 }
 
-.header{
+.header {
   width: 100%;
   height: 35px;
 
@@ -22,7 +22,7 @@ a{
   top: 0;
   z-index: 999; // Nenhum elemento vai cobrir o nav
 
-  background-color: rgba(17,17,17,0.8);
+  background-color: rgba(17, 17, 17, 0.8);
   backdrop-filter: blur(20px); // Estudar 
 }
 
@@ -32,7 +32,7 @@ a{
   padding: 5px 0px;
 }
 
-.nav-list-desktop{
+.nav-list-desktop {
   list-style: none;
 
   display: flex;
@@ -40,7 +40,7 @@ a{
   justify-content: space-between;
 }
 
-.nav-link{
+.nav-link {
   color: $gray;
   display: block;
   padding: 5px 10px;
@@ -49,66 +49,67 @@ a{
   opacity: 1;
   transition: 0.5s ease;
 
-  &:hover{
+  &:hover {
     opacity: 0.7;
   }
 }
 
-.nav-mobile{
- display: none; 
-}
-
-.nav-item-mobile{
+.nav-mobile {
   display: none;
 }
 
-@media (max-width: 38em){
-  .nav-list-desktop{
+.nav-item-mobile {
+  display: none;
+}
+
+@media (max-width: 38em) {
+  .nav-list-desktop {
     display: none;
   }
 
-  .nav-mobile{
+  .nav-mobile {
     list-style: none;
     display: flex;
     align-items: center;
     justify-content: space-between;
-   }
+  }
 
-   .hamburguer{
-     width: 25px;
-     height: 25px;
+  .hamburguer {
+    width: 25px;
+    height: 25px;
 
-     position: relative;
+    position: relative;
 
-     z-index: 900;
+    z-index: 900;
 
-     &:after{
-       content: "";
-       position: absolute;
+    &:after {
+      content: "";
+      position: absolute;
 
-       top: 38%;
-       left: 23%;
+      top: 38%;
+      left: 23%;
 
-       width: 55%;
-       height: 4%;
+      width: 55%;
+      height: 4%;
       background-color: $gray;
       transition: 1s ease;
-     }
-     &::before{
-       content: "";
-       position: absolute;
+    }
 
-       top: 63%;
-       left: 23%;
+    &::before {
+      content: "";
+      position: absolute;
 
-       width: 55%;
-       height: 4%;
+      top: 63%;
+      left: 23%;
+
+      width: 55%;
+      height: 4%;
       background-color: $gray;
       transition: 1s ease;
-     }
-   }
+    }
+  }
 
-   .hamburguer.hamburguer-active {
+  .hamburguer.hamburguer-active {
     width: 25px;
     height: 25px;
 
@@ -128,7 +129,7 @@ a{
 
       background-color: $gray;
     }
-    
+
     &:before {
       content: "";
       position: absolute;
@@ -144,10 +145,10 @@ a{
     }
   }
 
-  
-  .nav-list-mobile{
+
+  .nav-list-mobile {
     display: flex;
-    
+
     width: 100%;
     height: 0;
 
@@ -169,34 +170,34 @@ a{
     transition: 1s ease;
   }
 
-  .nav-item-mobile{
+  .nav-item-mobile {
     width: 100%;
     margin: 5px 0px;
     display: flex;
   }
 
-  .nav-link-mobile{
+  .nav-link-mobile {
     display: block;
     color: $gray;
-    
+
     width: 100%;
     padding-top: 10px;
     border-top: 1px solid #333;
 
     font-size: 11px;
-    
-    &:hover{
+
+    &:hover {
       opacity: 0.7;
     }
   }
 
-  .nav-list-mobile.active{
+  .nav-list-mobile.active {
     top: 0;
     height: 100vh;
     opacity: 1;
   }
 
-  .search{
+  .search {
     width: 100%;
     height: 25px;
     border-radius: 5px;
@@ -209,5 +210,266 @@ a{
     color: #888;
 
   }
+}
+
+/*IPHONE SE*/
+.iphonese {
+  width: 100%;
+  height: 70vh;
+
+  padding-top: 50px;
+  margin: 5px 0px;
+
+  background-color: $black1;
+}
+
+.container-iphonese {
+  max-width: 820px;
+  margin: 0 auto;
+  height: 100%;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.container-title-iphonese {
+  h1 {
+    color: $white1;
+    font-size: 48px;
+    text-align: center;
+    letter-spacing: -2px; // Espaçamento entre as letras
+  }
+
+  h3 {
+    color: $white1;
+    font-size: 24px;
+    text-align: center;
+    font-weight: normal; //Espesura da fonte
+    letter-spacing: -1px;
+  }
+
+  p {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    margin: 10px 0px;
+  }
+
+  .link {
+    display: block;
+    color: blue;
+
+    position: relative;
+    margin: 0px 20px;
+    opacity: 1;
+    transition: 0.5s ease;
+
+    &:after {
+      content: ">";
+      position: absolute;
+      top: 0;
+      right: -15px;
+    }
+
+    &:hover {
+      opacity: .8;
+      text-decoration: underline;
+    }
+
+  }
+}
+
+.container-img-iphonese {
+  img {
+    width: 100%;
+  }
+}
+
+/* IPHONE 11 */
+
+.iphone11 {
+  width: 100%;
+  height: 70vh;
+
+  margin: 5px 0px;
+  padding-top: 5vh;
+
+  background-image: url("../../img/iphone11.png");
+  background-size: 100%;
+  background-repeat: no-repeat;
+  background-position: center 100%;
+}
+
+@media screen and (max-width: 1380px) {
+  .iphone11 {
+    height: 60vh;
+    background-size: 120%;
+  }
+}
+
+@media screen and (max-width: 780px) {
+  .iphone11 {
+    height: 50vh;
+    background-size: 170%;
+  }
+
+  h1 {
+    font-size: 36px !important;
+  }
+
+  h3 {
+    font-size: 18px !important;
+  }
+}
+
+.container-iphone11 {
+  max-width: 820px;
+
+  margin: 0 auto;
+
+  display: flex;
+  justify-content: center;
+
+  h1 {
+    color: $black1;
+    font-size: 48px;
+    text-align: center;
+    letter-spacing: -2px;
+  }
+
+  h3 {
+    color: $black1;
+    font-size: 24px;
+    text-align: center;
+    font-weight: normal;
+    letter-spacing: -1px;
+  }
+
+  p {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    margin: 10px 0px;
+    
+  }
+  .link {
+    display: block;
+    color: blue;
+
+    position: relative;
+    margin: 0px 20px;
+    opacity: 1;
+    transition: 0.5s ease;
+
+    &:after {
+      content: ">";
+      position: absolute;
+      top: 0;
+      right: -15px;
+    }
+
+    &:hover {
+      opacity: .8;
+      text-decoration: underline;
+    }
+
+  }
 
 }
+
+/* PRODUCTS */
+
+.products {
+  width: 100%;
+  margin-top: 10px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.watch {
+  flex: 1 1 380px;
+  height: 100%;
+  margin: 0px 5px;
+  padding-top: 30px;
+
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+
+  h1 {
+    height: 70px;
+    background-image: url("../../img/fig_watch.png");
+    background-repeat: no-repeat;
+    background-size: 40%;
+    background-position: center center;
+  }
+
+  h3 {
+    color: $black1;
+    font-size: 18px;
+    text-align: center;
+    font-weight: normal;
+    letter-spacing: -1px;
+  }
+
+  p {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    margin: 10px 0px;
+  }
+
+  img {
+    width: 50%;
+  }
+}
+
+.airpods {
+  flex: 1 1 380px;
+  height: 110%;
+  margin: 0 5px;
+  padding-top: 30px;
+
+  background-color: #000;
+
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+
+  h1 {
+    color: $white1;
+    font-size: 36px;
+    text-align: center;
+    letter-spacing: -2px;
+  }
+
+  h3 {
+    color: $white1;
+    font-size: 18px;
+    text-align: center;
+    font-weight: normal;
+    letter-spacing: -1px;
+  }
+
+  p {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    margin: 10px 0px;
+  }
+
+  img {
+    width: 50%;
+  }
+}
+
+
